--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,4 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: go test -race -v ./...
+      - run: make tests
