--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,13 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
+
+references:
+  images: &GOLANG_IMAGE cimg/go:1.15.4
+
 jobs:
   build:
     docker:
-      # specify the version
-      - image: cimg/go:1.15.4
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /app
+      - image: *GOLANG_IMAGE
     steps:
       - checkout
-
-      # specify any bash command here prefixed with `run: `
       - run: make test
       - run: make bench
